[package]
name = "libretro-sys"
version = "0.1.1"
authors = ["Jan Bujak <j@exia.io>", "Florian Uekermann <florian@uekermann.email>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/koute/libretro-sys"
homepage = "https://github.com/koute/libretro-sys"
description = """
Raw libretro API bindings for Rust
"""

[dependencies]
libc = "0.2"
ash = "0.27.1"
